@@ -2,72 +2,43 @@ package com.simplecity.amp_library.search;
 
 import android.support.annotation.NonNull;
 import android.support.annotation.Nullable;
-import android.support.v7.widget.PopupMenu;
 import android.text.TextUtils;
-import android.view.View;
-
-import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
-import com.bumptech.glide.RequestManager;
-import com.simplecity.amp_library.R;
-import com.simplecity.amp_library.ShuttleApplication;
-import com.simplecity.amp_library.format.PrefixHighlighter;
 import com.simplecity.amp_library.model.Album;
 import com.simplecity.amp_library.model.AlbumArtist;
-import com.simplecity.amp_library.model.Header;
 import com.simplecity.amp_library.model.Song;
-import com.simplecity.amp_library.ui.adapters.ViewType;
+import com.simplecity.amp_library.playback.MediaManager;
 import com.simplecity.amp_library.ui.modelviews.AlbumArtistView;
 import com.simplecity.amp_library.ui.modelviews.AlbumView;
-import com.simplecity.amp_library.ui.modelviews.SearchHeaderView;
-import com.simplecity.amp_library.ui.modelviews.SongView;
 import com.simplecity.amp_library.ui.presenters.Presenter;
-import com.simplecity.amp_library.utils.ContextualToolbarHelper;
 import com.simplecity.amp_library.utils.DataManager;
 import com.simplecity.amp_library.utils.LogUtils;
-import com.simplecity.amp_library.utils.MenuUtils;
-import com.simplecity.amp_library.utils.MusicUtils;
-import com.simplecity.amp_library.utils.Operators;
 import com.simplecity.amp_library.utils.SettingsManager;
-import com.simplecity.amp_library.utils.ShuttleUtils;
 import com.simplecity.amp_library.utils.StringUtils;
-import com.simplecityapps.recycler_adapter.model.ViewModel;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-
-import javax.inject.Inject;
-
 import io.reactivex.Single;
 import io.reactivex.SingleObserver;
 import io.reactivex.SingleOperator;
 import io.reactivex.android.schedulers.AndroidSchedulers;
 import io.reactivex.disposables.Disposable;
+import java.util.Collections;
+import java.util.List;
+import javax.inject.Inject;
+import kotlin.Unit;
 
-public class SearchPresenter extends Presenter<SearchView> implements
-        AlbumView.ClickListener,
-        AlbumArtistView.ClickListener {
+public class SearchPresenter extends Presenter<SearchView> {
 
     private static final String TAG = "SearchPresenter";
 
     private static final double SCORE_THRESHOLD = 0.80;
 
-    private PrefixHighlighter prefixHighlighter;
-
-    private RequestManager requestManager;
-
-    ContextualToolbarHelper<Single<List<Song>>> contextualToolbarHelper;
-
     private Disposable performSearchSubscription;
-    private Disposable setItemsSubscription;
 
     private String query;
+    private MediaManager mediaManager;
 
     @Inject
-    public SearchPresenter(PrefixHighlighter prefixHighlighter, RequestManager requestManager) {
-        this.prefixHighlighter = prefixHighlighter;
-        this.requestManager = requestManager;
+    public SearchPresenter(@NonNull MediaManager mediaManager) {
+        this.mediaManager = mediaManager;
     }
 
     @Override
@@ -82,10 +53,6 @@ public class SearchPresenter extends Presenter<SearchView> implements
     @Override
     public void unbindView(@NonNull SearchView view) {
         super.unbindView(view);
-    }
-
-    public void setContextualToolbarHelper(ContextualToolbarHelper<Single<List<Song>>> contextualToolbarHelper) {
-        this.contextualToolbarHelper = contextualToolbarHelper;
     }
 
     void queryChanged(@Nullable String query) {
@@ -116,45 +83,24 @@ public class SearchPresenter extends Presenter<SearchView> implements
                 performSearchSubscription.dispose();
             }
 
-            boolean searchArtists = SettingsManager.getInstance().getSearchArtists();
-
-            Single<List<ViewModel>> albumArtistsObservable = searchArtists ? DataManager.getInstance().getAlbumArtistsRelay()
+            Single<List<AlbumArtist>> albumArtistsObservable = SettingsManager.getInstance().getSearchArtists() ? DataManager.getInstance().getAlbumArtistsRelay()
                     .first(Collections.emptyList())
-                    .lift(new AlbumArtistFilterOperator(query, requestManager, prefixHighlighter)) : Single.just(Collections.emptyList());
+                    .lift(new AlbumArtistFilterOperator(query)) : Single.just(Collections.emptyList());
 
-            boolean searchAlbums = SettingsManager.getInstance().getSearchAlbums();
-
-            Single<List<ViewModel>> albumsObservable = searchAlbums ? DataManager.getInstance().getAlbumsRelay()
+            Single<List<Album>> albumsObservable = SettingsManager.getInstance().getSearchAlbums() ? DataManager.getInstance().getAlbumsRelay()
                     .first(Collections.emptyList())
-                    .lift(new AlbumFilterOperator(query, requestManager, prefixHighlighter)) : Single.just(Collections.emptyList());
+                    .lift(new AlbumFilterOperator(query)) : Single.just(Collections.emptyList());
 
-            Single<List<ViewModel>> songsObservable = DataManager.getInstance().getSongsRelay()
+            Single<List<Song>> songsObservable = DataManager.getInstance().getSongsRelay()
                     .first(Collections.emptyList())
-                    .lift(new SongFilterOperator(query, requestManager, prefixHighlighter));
+                    .lift(new SongFilterOperator(query));
 
-            performSearchSubscription = Single.zip(
-                    albumArtistsObservable, albumsObservable, songsObservable,
-                    (adaptableItems, adaptableItems2, adaptableItems3) -> {
-                        List<ViewModel> list = new ArrayList<>();
-                        list.addAll(adaptableItems);
-                        list.addAll(adaptableItems2);
-                        list.addAll(adaptableItems3);
-                        return list;
-                    })
+            performSearchSubscription = Single.zip(albumArtistsObservable, albumsObservable, songsObservable, SearchResult::new)
                     .observeOn(AndroidSchedulers.mainThread())
-                    .subscribe(adaptableItems -> {
-
-                        //We've got a new set of items to adapt.. Cancel the in-flight subscription.
-                        if (setItemsSubscription != null) {
-                            setItemsSubscription.dispose();
-                        }
-
-                        if (adaptableItems.isEmpty()) {
-                            searchView.setEmpty(true);
-                        } else {
-                            setItemsSubscription = searchView.setItems(adaptableItems);
-                        }
-                    }, error -> LogUtils.logException(TAG, "Error refreshing adapter", error));
+                    .subscribe(
+                            searchView::setData,
+                            error -> LogUtils.logException(TAG, "Error refreshing adapter", error)
+                    );
 
             addDisposable(performSearchSubscription);
         }
@@ -175,111 +121,41 @@ public class SearchPresenter extends Presenter<SearchView> implements
         loadData(query);
     }
 
-    @Override
-    public void onAlbumArtistClick(int position, AlbumArtistView albumArtistView, AlbumArtistView.ViewHolder viewholder) {
-        if (!contextualToolbarHelper.handleClick(position, albumArtistView, albumArtistView.albumArtist.getSongsSingle())) {
-            SearchView view = getView();
+    void onSongClick(List<Song> songs, Song song) {
+        SearchView view = getView();
+
+        mediaManager.playAll(songs, songs.indexOf(song), true, message -> {
             if (view != null) {
-                view.goToArtist(albumArtistView.albumArtist, viewholder.imageOne);
+                view.showToast(message);
             }
+            return Unit.INSTANCE;
+        });
+    }
+
+    void onArtistClicked(AlbumArtistView albumArtistView, AlbumArtistView.ViewHolder viewholder) {
+        com.simplecity.amp_library.search.SearchView view = getView();
+        if (view != null) {
+            view.goToArtist(albumArtistView.albumArtist, viewholder.imageOne);
         }
     }
 
-    @Override
-    public boolean onAlbumArtistLongClick(int position, AlbumArtistView albumArtistView) {
-        return contextualToolbarHelper.handleLongClick(position, albumArtistView, albumArtistView.albumArtist.getSongsSingle());
-    }
-
-    @Override
-    public void onAlbumArtistOverflowClicked(View v, AlbumArtist albumArtist) {
-        PopupMenu menu = new PopupMenu(v.getContext(), v);
-        menu.inflate(R.menu.menu_artist);
-        menu.setOnMenuItemClickListener(MenuUtils.getAlbumArtistClickListener(
-                v.getContext(),
-                albumArtist,
-                taggerDialog -> {
-                    SearchView searchView = getView();
-                    if (searchView != null) {
-                        searchView.showTaggerDialog(taggerDialog);
-                    }
-                },
-                deleteDialog -> {
-                    SearchView searchView = getView();
-                    if (searchView != null) {
-                        searchView.showDeleteDialog(deleteDialog);
-                    }
-                }, null,
-                () -> {
-                    SearchView searchView = getView();
-                    if (searchView != null) {
-                        searchView.showUpgradeDialog();
-                    }
-                }));
-        menu.show();
-    }
-
-    @Override
-    public void onAlbumClick(int position, AlbumView albumView, AlbumView.ViewHolder viewHolder) {
-        if (!contextualToolbarHelper.handleClick(position, albumView, albumView.album.getSongsSingle())) {
-            SearchView view = getView();
-            if (view != null) {
-                view.goToAlbum(albumView.album, viewHolder.imageOne);
-            }
+    void onAlbumClick(AlbumView albumView, AlbumView.ViewHolder viewHolder) {
+        com.simplecity.amp_library.search.SearchView view = getView();
+        if (view != null) {
+            view.goToAlbum(albumView.album, viewHolder.imageOne);
         }
     }
 
-    @Override
-    public boolean onAlbumLongClick(int position, AlbumView albumView) {
-        return contextualToolbarHelper.handleLongClick(position, albumView, albumView.album.getSongsSingle());
-    }
-
-    @Override
-    public void onAlbumOverflowClicked(View v, Album album) {
-        PopupMenu menu = new PopupMenu(v.getContext(), v);
-        MenuUtils.setupAlbumMenu(menu);
-        menu.setOnMenuItemClickListener(MenuUtils.getAlbumMenuClickListener(
-                v.getContext(),
-                album,
-                taggerDialog -> {
-                    SearchView searchView = getView();
-                    if (searchView != null) {
-                        searchView.showTaggerDialog(taggerDialog);
-                    }
-                },
-                deleteDialog -> {
-                    SearchView searchView = getView();
-                    if (searchView != null) {
-                        searchView.showDeleteDialog(deleteDialog);
-                    }
-                }, null,
-                () -> {
-                    SearchView searchView = getView();
-                    if (searchView != null) {
-                        searchView.showUpgradeDialog();
-                    }
-                }
-        ));
-        menu.show();
-    }
-
-    private class SongFilterOperator implements SingleOperator<List<ViewModel>, List<Song>> {
+    private class SongFilterOperator implements SingleOperator<List<Song>, List<Song>> {
 
         String filterString;
 
-        RequestManager requestManager;
-
-        PrefixHighlighter prefixHighlighter;
-
-        SearchHeaderView songsHeader = new SearchHeaderView(new Header(ShuttleApplication.getInstance().getString(R.string.tracks_title)));
-
-        SongFilterOperator(@NonNull String filterString, @NonNull RequestManager requestManager, @NonNull PrefixHighlighter prefixHighlighter) {
+        SongFilterOperator(@NonNull String filterString) {
             this.filterString = filterString;
-            this.requestManager = requestManager;
-            this.prefixHighlighter = prefixHighlighter;
         }
 
         @Override
-        public SingleObserver<? super List<Song>> apply(SingleObserver<? super List<ViewModel>> observer) throws Exception {
+        public SingleObserver<? super List<Song>> apply(SingleObserver<? super List<Song>> observer) {
             return new SingleObserver<List<Song>>() {
                 @Override
                 public void onSubscribe(Disposable d) {
@@ -288,36 +164,9 @@ public class SearchPresenter extends Presenter<SearchView> implements
 
                 @Override
                 public void onSuccess(List<Song> songs) {
-                    char[] prefix = filterString.toUpperCase().toCharArray();
-
-                    List<Album> albums = Operators.songsToAlbums(songs);
-                    Collections.sort(albums, Album::compareTo);
-
-                    List<AlbumArtist> albumArtists = Operators.albumsToAlbumArtists(albums);
-                    Collections.sort(albumArtists, AlbumArtist::compareTo);
-
-                    boolean fuzzy = SettingsManager.getInstance().getSearchFuzzy();
-
-                    Stream<Song> songStream = Stream.of(songs)
-                            .filter(song -> song.name != null);
-
-                    songs = (fuzzy ? applyJaroWinklerFilter(songStream) : applySongFilter(songStream))
-                            .toList();
-
-                    SongViewClickListener songViewClickListener = new SongViewClickListener(songs);
-
-                    List<ViewModel> viewModels = Stream.of(songs).map(song -> {
-                        SongView songView = new SongView(song, requestManager);
-                        songView.setClickListener(songViewClickListener);
-                        songView.setPrefix(prefixHighlighter, prefix);
-                        return songView;
-                    }).collect(Collectors.toList());
-
-                    if (!viewModels.isEmpty()) {
-                        viewModels.add(0, songsHeader);
-                    }
-
-                    observer.onSuccess(viewModels);
+                    Stream<Song> songStream = Stream.of(songs).filter(song -> song.name != null);
+                    songs = (SettingsManager.getInstance().getSearchFuzzy() ? applyJaroWinklerFilter(songStream) : applySongFilter(songStream)).toList();
+                    observer.onSuccess(songs);
                 }
 
                 @Override
@@ -340,24 +189,16 @@ public class SearchPresenter extends Presenter<SearchView> implements
         }
     }
 
-    private class AlbumFilterOperator implements SingleOperator<List<ViewModel>, List<Album>> {
+    private class AlbumFilterOperator implements SingleOperator<List<Album>, List<Album>> {
 
         String filterString;
 
-        RequestManager requestManager;
-
-        PrefixHighlighter prefixHighlighter;
-
-        SearchHeaderView albumsHeader = new SearchHeaderView(new Header(ShuttleApplication.getInstance().getString(R.string.albums_title)));
-
-        AlbumFilterOperator(@NonNull String filterString, @NonNull RequestManager requestManager, @NonNull PrefixHighlighter prefixHighlighter) {
+        AlbumFilterOperator(@NonNull String filterString) {
             this.filterString = filterString;
-            this.requestManager = requestManager;
-            this.prefixHighlighter = prefixHighlighter;
         }
 
         @Override
-        public SingleObserver<? super List<Album>> apply(SingleObserver<? super List<ViewModel>> observer) throws Exception {
+        public SingleObserver<? super List<Album>> apply(SingleObserver<? super List<Album>> observer) {
             return new SingleObserver<List<Album>>() {
                 @Override
                 public void onSubscribe(Disposable d) {
@@ -366,29 +207,10 @@ public class SearchPresenter extends Presenter<SearchView> implements
 
                 @Override
                 public void onSuccess(List<Album> albums) {
-                    char[] prefix = filterString.toUpperCase().toCharArray();
-
                     Collections.sort(albums, Album::compareTo);
-
-                    boolean fuzzy = SettingsManager.getInstance().getSearchFuzzy();
-
-                    Stream<Album> albumStream = Stream.of(albums)
-                            .filter(album -> album.name != null);
-
-                    Stream<Album> filteredStream = fuzzy ? applyJaroWinklerAlbumFilter(albumStream) : applyAlbumFilter(albumStream);
-
-                    List<ViewModel> viewModels = filteredStream.map(album -> {
-                        AlbumView albumView = new AlbumView(album, ViewType.ALBUM_LIST, requestManager);
-                        albumView.setClickListener(SearchPresenter.this);
-                        albumView.setPrefix(prefixHighlighter, prefix);
-                        return albumView;
-                    }).collect(Collectors.toList());
-
-                    if (!viewModels.isEmpty()) {
-                        viewModels.add(0, albumsHeader);
-                    }
-
-                    observer.onSuccess(viewModels);
+                    Stream<Album> albumStream = Stream.of(albums).filter(album -> album.name != null);
+                    Stream<Album> filteredStream = SettingsManager.getInstance().getSearchFuzzy() ? applyJaroWinklerAlbumFilter(albumStream) : applyAlbumFilter(albumStream);
+                    observer.onSuccess(filteredStream.toList());
                 }
 
                 @Override
@@ -411,24 +233,16 @@ public class SearchPresenter extends Presenter<SearchView> implements
         }
     }
 
-    private class AlbumArtistFilterOperator implements SingleOperator<List<ViewModel>, List<AlbumArtist>> {
+    private class AlbumArtistFilterOperator implements SingleOperator<List<AlbumArtist>, List<AlbumArtist>> {
 
         String filterString;
 
-        RequestManager requestManager;
-
-        PrefixHighlighter prefixHighlighter;
-
-        SearchHeaderView artistsHeader = new SearchHeaderView(new Header(ShuttleApplication.getInstance().getString(R.string.artists_title)));
-
-        AlbumArtistFilterOperator(@NonNull String filterString, @NonNull RequestManager requestManager, @NonNull PrefixHighlighter prefixHighlighter) {
+        AlbumArtistFilterOperator(@NonNull String filterString) {
             this.filterString = filterString;
-            this.requestManager = requestManager;
-            this.prefixHighlighter = prefixHighlighter;
         }
 
         @Override
-        public SingleObserver<? super List<AlbumArtist>> apply(SingleObserver<? super List<ViewModel>> observer) throws Exception {
+        public SingleObserver<? super List<AlbumArtist>> apply(SingleObserver<? super List<AlbumArtist>> observer) {
             return new SingleObserver<List<AlbumArtist>>() {
                 @Override
                 public void onSubscribe(Disposable d) {
@@ -437,31 +251,11 @@ public class SearchPresenter extends Presenter<SearchView> implements
 
                 @Override
                 public void onSuccess(List<AlbumArtist> albumArtists) {
-                    char[] prefix = filterString.toUpperCase().toCharArray();
-
                     Collections.sort(albumArtists, AlbumArtist::compareTo);
-
-                    boolean fuzzy = SettingsManager.getInstance().getSearchFuzzy();
-
-                    Stream<AlbumArtist> albumArtistStream = Stream.of(albumArtists)
-                            .filter(albumArtist -> albumArtist.name != null);
-
-                    Stream<AlbumArtist> filteredStream = fuzzy ? applyJaroWinklerAlbumArtistFilter(albumArtistStream) : applyAlbumArtistFilter(albumArtistStream);
-
-                    List<ViewModel> viewModels = filteredStream
-                            .map(albumArtist -> {
-                                AlbumArtistView albumArtistView = new AlbumArtistView(albumArtist, ViewType.ARTIST_LIST, requestManager);
-                                albumArtistView.setClickListener(SearchPresenter.this);
-                                albumArtistView.setPrefix(prefixHighlighter, prefix);
-                                return (ViewModel) albumArtistView;
-                            })
-                            .toList();
-
-                    if (!viewModels.isEmpty()) {
-                        viewModels.add(0, artistsHeader);
-                    }
-
-                    observer.onSuccess(viewModels);
+                    Stream<AlbumArtist> albumArtistStream = Stream.of(albumArtists).filter(albumArtist -> albumArtist.name != null);
+                    Stream<AlbumArtist> filteredStream =
+                            SettingsManager.getInstance().getSearchFuzzy() ? applyJaroWinklerAlbumArtistFilter(albumArtistStream) : applyAlbumArtistFilter(albumArtistStream);
+                    observer.onSuccess(filteredStream.toList());
                 }
 
                 @Override
@@ -481,67 +275,6 @@ public class SearchPresenter extends Presenter<SearchView> implements
 
         Stream<AlbumArtist> applyAlbumArtistFilter(Stream<AlbumArtist> stream) {
             return stream.filter(albumArtist -> StringUtils.containsIgnoreCase(albumArtist.name, filterString));
-        }
-    }
-
-    private class SongViewClickListener implements SongView.ClickListener {
-
-        List<Song> songs;
-
-        public SongViewClickListener(List<Song> songs) {
-            this.songs = songs;
-        }
-
-        @Override
-        public void onSongClick(int position, SongView songView) {
-            if (!contextualToolbarHelper.handleClick(position, songView, Single.just(Collections.singletonList(songView.song)))) {
-
-                SearchView view = getView();
-
-                int index = songs.indexOf(songView.song);
-
-                MusicUtils.playAll(songs, index, true, (String message) -> {
-                    if (view != null) {
-                        view.showToast(message);
-                    }
-                });
-            }
-        }
-
-        @Override
-        public boolean onSongLongClick(int position, SongView songView) {
-            return contextualToolbarHelper.handleLongClick(position, songView, Single.just(Collections.singletonList(songView.song)));
-        }
-
-        @Override
-        public void onSongOverflowClick(int position, View v, Song song) {
-            PopupMenu menu = new PopupMenu(v.getContext(), v);
-            MenuUtils.setupSongMenu(menu, false);
-            menu.setOnMenuItemClickListener(MenuUtils.getSongMenuClickListener(
-                    v.getContext(),
-                    song,
-                    taggerDialog -> {
-                        SearchView searchView = getView();
-                        if (searchView != null) {
-                            if (!ShuttleUtils.isUpgraded()) {
-                                searchView.showUpgradeDialog();
-                            } else {
-                                searchView.showTaggerDialog(taggerDialog);
-                            }
-                        }
-                    },
-                    deleteDialog -> {
-                        SearchView searchView = getView();
-                        if (searchView != null) {
-                            searchView.showDeleteDialog(deleteDialog);
-                        }
-                    }, null, null, null));
-            menu.show();
-        }
-
-        @Override
-        public void onStartDrag(SongView.ViewHolder holder) {
-
         }
     }
 }
